Fix: change various css overlaps to resolve quick fix clashes

--- a/src/sass/_vintage_custom-styles.scss
+++ b/src/sass/_vintage_custom-styles.scss
@@ -80,13 +80,13 @@
 }
 
 .cta {
-  background: #ddd;
-  border-color: #ccc;
-  font-weight: bold;
-  color: #FFF;
-  display: inline-block;
-  line-height: 1em;
-  padding: 10px;
-  border-radius: 5px;
-  text-decoration: none !important;
+  //background: #ddd;
+  //border-color: #ccc;
+  //font-weight: bold;
+  //color: #FFF;
+  //display: inline-block;
+  //line-height: 1em;
+  //padding: 10px;
+  //border-radius: 5px;
+  //text-decoration: none !important;
 }
